Update WolfChunkLoader.java